--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,9 @@
   font-family: 'Georgia', 'Times', serif;
   box-sizing: border-box;
 }
+
+img {
+  border-radius: 100%;
+  width: 200px;
+  height: 200px;
+}
