--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,13 +4,186 @@
 }
 */
 
-img {
-  border-radius: 100%;
-  width: 200px;
-  height: 200px;
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800);
+@charset "utf-8";
+@-webkit-viewport   { width: device-width; }
+@-moz-viewport      { width: device-width; }
+@-ms-viewport       { width: device-width; }
+@-o-viewport        { width: device-width; }
+@viewport           { width: device-width; }
+
+body {
+font-family: 'Open Sans', Arial, Tahoma;
+font-weight: 400;
+color: #363636;
+background: #334960;
 }
 
-contact-item {
+.container{
+  margin-top: 80px;
+  margin-bottom: 15px;
+  background: #fff;
+}
+
+#header-photo{
+  margin-top: -75px;
+}
+#photo{
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  overflow: hidden;
+  padding: 5px;
+  background: #334960;
+  display: inline-block;
+}
+#photo img{
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
+}
+#header-text h1{
+  margin: 0;
+  padding: 0;
+  font-size: 1.5em;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+}
+#header-text h1 .name {
+  font-weight: 800;
+  line-height: 1.5em;
+}
+#header-text h1 .tagline{
+  color: #334960;
+  opacity: 0.7;
+}
+#header-text:after{
+  width: 100%;
+  height: 3px;
+  border-bottom: 1px solid #ddd;
+  margin-top: 15px;
+  content: '';
+  display: block;
+}
+.box {
+  padding-bottom: 10px;
+  margin-bottom: 25px;
+}
+.box h2 {
+  color: #227c74;
+  font-size: 1.5em;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.job {
+  margin-bottom: 10px;
+}
+.general-details {
+  margin-left: 3%;
+  width: 95%;
+  padding: 10px;
+  margin-bottom: 10px;
+  background: #eee;
+  border-bottom: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+}
+.name {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+.duration {
+  opacity: 0.8;
+}
+.specific-details {
+  padding-left: 5%;
+  width: 100%;
+}
+.job .position{
+  font-size: 1.2em;
+  font-weight: bold;
+}
+.list-group {
+  padding-left: 0%;
+  width: 98%;
+  margin-bottom: 15px;
+}
+
+.contact-item {
   width: 100%;
   float: left;
+}
+.contact-item .icon {
+  padding: 10px;
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  background: #eee;
+}
+.contact-item .title {
+  width: 82%;
+  font-weight: 700;
+  opacity: 0.9;
+}
+.contact-item .title.only {
+  padding-top: 8px;
+}
+#education{
+  margin-top: 15px;
+  margin-bottom: 0;
+  position: relative;
+  padding: 1em 0;
+  list-style: none;
+}
+#education:before {
+  width: 5px;
+  height: 100%;
+  position: absolute;
+  left: 35px;
+  top: 0;
+  content: ' ';
+  display: block;
+  background: #32475c;
+}
+#education li {
+  width: 100%;
+  z-index: 2;
+  position: relative;
+  float: left;
+}
+#education .year {
+  width: 14%;
+  background: #fff;
+  padding: 10px;
+  font-weight: 700;
+  display: inline-block;
+}
+#education .description {
+  width: 82%;
+  display: inline-block;
+  background: #eee;
+  margin-bottom: 10px;
+  position: relative;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+}
+#education .description h3 {
+  font-size: 1.2em;
+  font-weight: 700;
+  margin: 0;
+  padding-bottom: 5px;
+}
+
+.item-skills, .item-interests{
+  height: 30px;
+  padding: 5px 10px;
+  font-size: 1.1em;
+  font-weight: 600;
+}
+.skill {
+  margin-right: 5px;
+  margin-bottom: 5px;
+  padding: 5px 10px;
+  background: #32475c;
+  font-size: 0.9em;
 }
